adding path to yaml file for importing excel and build rest.
